--- a/templates/base.html
+++ b/templates/base.html
@@ -140,6 +140,12 @@
                         </a>
                     </li>
                     <li>
+                        <a href="{% url 'provider_plans' %}" class="flex items-center px-6 py-3 hover:bg-gray-50 dark:hover:bg-gray-700 {% if segment == 'plans_config' %}active-nav{% endif %}">
+                            <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 012-2h2a2 2 0 012 2"></path></svg>
+                            Configurar Planos
+                        </a>
+                    </li>
+                    <li>
                         <a href="{% url 'provider_sgp_integrations' %}" class="flex items-center px-6 py-3 hover:bg-gray-50 dark:hover:bg-gray-700 {% if segment == 'provider_integrations_sgp' %}active-nav{% endif %}">
                             <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
                             Integrações
