feat: improve user registration and webhook logic for production

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,14 +60,14 @@
                     </div>
                     <div>
                         <h1 class="font-bold text-sm">
+                            {{ request.user.username|upper }}
+                        </h1>
+                        <p class="text-xs text-gray-500 dark:text-gray-400">
                             {% if request.user.provider %}
                                 {{ request.user.provider.name|upper }}
                             {% else %}
-                                {{ request.user.username|upper }}
+                                {% if request.user.is_superuser %}SUPER ADMIN{% else %}ADMIN{% endif %}
                             {% endif %}
-                        </h1>
-                        <p class="text-xs text-gray-500 dark:text-gray-400">
-                            {% if request.user.is_superuser %}SUPER ADMIN{% else %}ADMIN{% endif %}
                         </p>
                     </div>
                 </div>
@@ -116,9 +116,15 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{% url 'user_list' %}" class="flex items-center px-6 py-3 hover:bg-gray-50 dark:hover:bg-gray-700 {% if segment == 'users' %}active-nav{% endif %}">
+                        <a href="{% url 'panel_user_list' %}" class="flex items-center px-6 py-3 hover:bg-gray-50 dark:hover:bg-gray-700 {% if segment == 'panel_users' %}active-nav{% endif %}">
                             <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z"></path></svg>
                             Usuários
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'user_list' %}" class="flex items-center px-6 py-3 hover:bg-gray-50 dark:hover:bg-gray-700 {% if segment == 'users' %}active-nav{% endif %}">
+                            <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>
+                            Clientes App
                         </a>
                     </li>
                     <li>
