--- a/templates/provider_users.html
+++ b/templates/provider_users.html
@@ -60,7 +60,7 @@
                     </td>
                     <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium space-x-3">
                         <button 
-                            onclick="openEditModal('{{ user.id }}', '{{ user.username }}', '{{ user.email|default:'' }}')" 
+                            onclick="openEditModal('{{ user.id }}', '{{ user.username|escapejs }}', '{{ user.email|default:''|escapejs }}')" 
                             class="text-blue-600 hover:text-blue-900 dark:text-blue-400 dark:hover:text-blue-300"
                         >
                             Editar
