--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -36,8 +36,8 @@
         <div class="flex flex-col">
             {% if last_notification %}
             <span class="text-xl font-bold text-white mb-1">Ok</span>
-            <span class="text-xs text-gray-400 mb-2">{{ last_notification.sent_at|date:"d/m/Y, H:i:s" }}</span>
-            <span class="px-3 py-1 bg-gray-700 text-gray-300 text-xs font-bold rounded-full w-max uppercase">{{ last_notification.get_status_display }}</span>
+            <span class="text-xs text-gray-400 mb-2">{{ last_notification.created_at|date:"d/m/Y, H:i:s" }}</span>
+            <span class="px-3 py-1 bg-gray-700 text-gray-300 text-xs font-bold rounded-full w-max uppercase">{{ last_notification.source|default:"N/A" }}</span>
             {% else %}
             <span class="text-xl font-bold text-gray-500 mb-1">Nenhum envio</span>
             {% endif %}
